feat: Add GAME_MISMATCH exception and amount fields in responseDto
- 한 예매에서는 같은 게임의 좌석만 요청 가능
   - gameId 검증 쿼리 추가
- 좌석 선점 API 응답에 amount 추가(결제 생성 API에 필요)
- game_seats의 price를 order_seats로 전달, price_polices에서 찾아오는 것 삭제
- OrderCreatedEvent 삭제(유저 시나리오상 불필요)