@@ -10,7 +10,6 @@ import com.sportsify.game.domain.repository.GameRepository;
 import com.sportsify.game.domain.repository.GameSeatRepository;
 import com.sportsify.member.domain.model.Member;
 import com.sportsify.member.domain.repository.MemberRepository;
-import com.sportsify.ticketing.application.event.OrderEventPublisher;
 import com.sportsify.ticketing.application.service.ReservationService;
 import com.sportsify.ticketing.domain.model.Order;
 import com.sportsify.ticketing.domain.model.OrderSeat;
@@ -26,7 +25,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.context.ApplicationEventPublisher;
 
 import java.util.Collections;
 import java.util.List;
@@ -58,13 +56,6 @@ public class ReservationServiceTest {
 
     @Mock
     private GameRepository gameRepository;
-
-
-    @Mock
-    private ApplicationEventPublisher eventPublisher;
-
-    @Mock
-    private OrderEventPublisher orderEventPublisher;
 
     @Test
     @DisplayName("존재하지 않는 회원 ID를 요청으로 받으면 예외를 반환한다.")
@@ -135,18 +126,52 @@ public class ReservationServiceTest {
     }
 
     @Test
+    @DisplayName("다른 게임의 좌석이 포함되어 있으면 예외를 반환한다.")
+    public void gameMismatch() {
+        ReservationSeatsRequestDto reqDto = ReservationSeatsRequestDto.from(1L, List.of(1L, 2L));
+
+        Member mockMember = mock(Member.class);
+        Game mockGame = mock(Game.class);
+        GameSeat seat1 = mock(GameSeat.class);
+        GameSeat seat2 = mock(GameSeat.class);
+        Game otherGame = mock(Game.class);
+
+        when(memberRepository.findById(1L)).thenReturn(Optional.of(mockMember));
+        when(gameRepository.findById(1L)).thenReturn(Optional.of(mockGame));
+        when(mockGame.isOnSale()).thenReturn(true);
+        when(mockGame.getMaxTicketPerUser()).thenReturn(4);
+        when(mockGame.getId()).thenReturn(1L);
+
+        when(gameSeatRepository.findAllById(List.of(1L, 2L))).thenReturn(List.of(seat1, seat2));
+        when(seat1.getGame()).thenReturn(mockGame);
+        when(seat2.getGame()).thenReturn(otherGame);
+        when(otherGame.getId()).thenReturn(999L);
+
+        assertThatThrownBy(() -> reservationService.reserveSeat(1L, reqDto))
+                .isInstanceOf(BusinessException.class)
+                .extracting(e -> ((BusinessException) e).getErrorCode())
+                .isEqualTo(ErrorCode.GAME_MISMATCH);
+    }
+
+    @Test
     @DisplayName("선점 가능한 좌석 수와 요청한 좌석 수가 일치하지 않으면 예외를 반환한다.")
     public void checkAvailableSeats() {
         ReservationSeatsRequestDto reqDto = ReservationSeatsRequestDto.from(1L, List.of(1L));
 
         Member mockMember = mock(Member.class);
         Game mockGame = mock(Game.class);
+        GameSeat seat1 = mock(GameSeat.class);
 
         when(memberRepository.findById(1L)).thenReturn(Optional.of(mockMember));
         when(gameRepository.findById(1L)).thenReturn(Optional.of(mockGame));
         when(mockGame.isOnSale()).thenReturn(true);
         when(mockGame.getMaxTicketPerUser()).thenReturn(2);
-        when(gameSeatRepository.findAllAvailableByIdsWithLock(reqDto.seatIds())).thenReturn(Collections.emptyList());
+        when(mockGame.getId()).thenReturn(1L);
+
+        when(gameSeatRepository.findAllById(List.of(1L))).thenReturn(List.of(seat1));
+        when(seat1.getGame()).thenReturn(mockGame);
+
+        when(gameSeatRepository.findAllAvailableByGameIdAndIdsWithLock(anyLong(), anyList())).thenReturn(Collections.emptyList());
 
         assertThatThrownBy(() -> reservationService.reserveSeat(1L, reqDto))
                 .isInstanceOf(BusinessException.class)
@@ -169,7 +194,14 @@ public class ReservationServiceTest {
         when(gameRepository.findById(1L)).thenReturn(Optional.of(mockGame));
         when(mockGame.isOnSale()).thenReturn(true);
         when(mockGame.getMaxTicketPerUser()).thenReturn(4);
-        when(gameSeatRepository.findAllAvailableByIdsWithLock(reqDto.seatIds()))
+        when(mockGame.getId()).thenReturn(1L);
+
+        when(gameSeatRepository.findAllById(List.of(1L, 2L, 3L))).thenReturn(List.of(seat1, seat2, seat3));
+        when(seat1.getGame()).thenReturn(mockGame);
+        when(seat2.getGame()).thenReturn(mockGame);
+        when(seat3.getGame()).thenReturn(mockGame);
+
+        when(gameSeatRepository.findAllAvailableByGameIdAndIdsWithLock(anyLong(), anyList()))
                 .thenReturn(List.of(seat1, seat2, seat3));
 
         when(pricePolicyService.getPriceMap(any(Game.class), anyList()))
@@ -199,7 +231,7 @@ public class ReservationServiceTest {
         when(gameRepository.findById(1L)).thenReturn(Optional.of(mockGame));
         when(mockGame.isOnSale()).thenReturn(true);
         when(mockGame.getMaxTicketPerUser()).thenReturn(2);
-        when(gameSeatRepository.findAllAvailableByIdsWithLock(reqDto.seatIds())).thenReturn(List.of(mockGameSeat));
+        when(gameSeatRepository.findAllAvailableByGameIdAndIdsWithLock(anyLong(), anyList())).thenReturn(List.of(mockGameSeat));
 
         when(pricePolicyService.getPriceMap(any(Game.class), anyList()))
                 .thenReturn(Map.of("STANDARD", 10000));
@@ -232,7 +264,14 @@ public class ReservationServiceTest {
         when(gameRepository.findById(1L)).thenReturn(Optional.of(mockGame));
         when(mockGame.isOnSale()).thenReturn(true);
         when(mockGame.getMaxTicketPerUser()).thenReturn(4);
-        when(gameSeatRepository.findAllAvailableByIdsWithLock(reqDto.seatIds()))
+        when(mockGame.getId()).thenReturn(1L);
+
+        when(gameSeatRepository.findAllById(List.of(1L, 2L, 3L))).thenReturn(List.of(seat1, seat2, seat3));
+        when(seat1.getGame()).thenReturn(mockGame);
+        when(seat2.getGame()).thenReturn(mockGame);
+        when(seat3.getGame()).thenReturn(mockGame);
+
+        when(gameSeatRepository.findAllAvailableByGameIdAndIdsWithLock(anyLong(), anyList()))
                 .thenReturn(List.of(seat1, seat2, seat3));
 
         when(pricePolicyService.getPriceMap(any(Game.class), anyList()))
@@ -242,41 +281,12 @@ public class ReservationServiceTest {
         when(seat2.getZoneGradeName()).thenReturn("STANDARD");
         when(seat3.getZoneGradeName()).thenReturn("STANDARD");
 
-        ReservationSeatsResponseDto reservationSeatsResponseDto = reservationService.reserveSeat(1L, reqDto);
+        ReservationSeatsResponseDto response = reservationService.reserveSeat(1L, reqDto);
 
-        assertThat(reservationSeatsResponseDto.gameId()).isEqualTo(1L);
-        assertThat(reservationSeatsResponseDto.seats().size()).isEqualTo(3);
-        assertThat(reservationSeatsResponseDto.status()).isEqualTo(OrderStatus.PENDING);
-
-    }
-
-    @Test
-    @DisplayName("주문이 생성될 때 OrderCreatedEvent를 발행한다.")
-    void createOrder_publishEvent() {
-        ReservationSeatsRequestDto reqDto = ReservationSeatsRequestDto.from(1L, List.of(1L));
-
-        Member mockMember = mock(Member.class);
-        Game mockGame = mock(Game.class);
-        GameSeat mockGameSeat = mock(GameSeat.class);
-        Order mockOrder = mock(Order.class);
-
-        when(mockGame.isOnSale()).thenReturn(true);
-        when(mockGame.getMaxTicketPerUser()).thenReturn(2);
-        when(mockGameSeat.getZoneGradeName()).thenReturn("STANDARD");
-
-        when(pricePolicyService.getPriceMap(any(Game.class), anyList()))
-                .thenReturn(Map.of("STANDARD", 10000));
-
-        when(memberRepository.findById(1L)).thenReturn(Optional.of(mockMember));
-        when(gameRepository.findById(1L)).thenReturn(Optional.of(mockGame));
-        when(gameSeatRepository.findAllAvailableByIdsWithLock(any())).thenReturn(List.of(mockGameSeat));
-
-        when(orderRepository.save(any(Order.class))).thenReturn(mockOrder);
-
-        reservationService.reserveSeat(1L, reqDto);
-
-        verify(orderEventPublisher, times(1))
-                .publishOrderCreated(nullable(Order.class));
+        assertThat(response.gameId()).isEqualTo(1L);
+        assertThat(response.seats()).hasSize(3);
+        assertThat(response.status()).isEqualTo(OrderStatus.PENDING);
+        assertThat(response.amount()).isEqualTo(30000L);
     }
 
     @Test
@@ -291,13 +301,17 @@ public class ReservationServiceTest {
 
         when(mockGame.isOnSale()).thenReturn(true);
         when(mockGame.getMaxTicketPerUser()).thenReturn(4);
+        when(mockGame.getId()).thenReturn(1L);
 
         when(seat1.getZoneGradeName()).thenReturn("STANDARD");
         when(seat2.getZoneGradeName()).thenReturn("STANDARD");
+        when(seat1.getGame()).thenReturn(mockGame);
+        when(seat2.getGame()).thenReturn(mockGame);
 
         when(memberRepository.findById(1L)).thenReturn(Optional.of(mockMember));
         when(gameRepository.findById(1L)).thenReturn(Optional.of(mockGame));
-        when(gameSeatRepository.findAllAvailableByIdsWithLock(anyList()))
+        when(gameSeatRepository.findAllById(List.of(1L, 2L))).thenReturn(List.of(seat1, seat2));
+        when(gameSeatRepository.findAllAvailableByGameIdAndIdsWithLock(anyLong(), anyList()))
                 .thenReturn(List.of(seat1, seat2));
 
         when(pricePolicyService.getPriceMap(any(Game.class), anyList()))
@@ -306,9 +320,7 @@ public class ReservationServiceTest {
         ArgumentCaptor<Order> orderCaptor = ArgumentCaptor.forClass(Order.class);
         when(orderRepository.save(orderCaptor.capture())).thenAnswer(inv -> inv.getArgument(0));
 
-        doNothing().when(orderEventPublisher).publishOrderCreated(any());
-
-        reservationService.reserveSeat(1L, reqDto);
+        ReservationSeatsResponseDto response = reservationService.reserveSeat(1L, reqDto);
 
         Order savedOrder = orderCaptor.getValue();
         List<OrderSeat> orderSeats = savedOrder.getOrderSeats();
@@ -316,11 +328,7 @@ public class ReservationServiceTest {
         assertThat(orderSeats).hasSize(2);
         assertThat(orderSeats.get(0).getPrice()).isEqualTo(10000);
         assertThat(orderSeats.get(1).getPrice()).isEqualTo(10000);
-
-        long totalAmount = orderSeats.stream()
-                .mapToLong(OrderSeat::getPrice)
-                .sum();
-        assertThat(totalAmount).isEqualTo(20000L);
+        assertThat(response.amount()).isEqualTo(20000L);
     }
 
 }
